tests/negative/neg_pr362_removable_semicolon.safe
package neg_pr362_removable_semicolon
-- migrate: skip

   function broken returns integer
      value : integer = 1;
      return value
